--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ div {
     margin-bottom: 1em;
     padding: .5em;
     text-align: right;
+    height: 1.5em;
 }
 #buttons-container {
     border: none;
